--- a/gb/14/6/9/n4173977.md
+++ b/gb/14/6/9/n4173977.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5773.md#1">贪腐淫乱 | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/mprjd2205/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mprjd2205/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/osnkrv285/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/osnkrv285/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>历史今日：2.7亿年“藏字石”蕴藏巨大天机</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2014/06/1406081923342436.jpg" />
+<img width="600" src="http://i.epochtimes.com/assets/uploads/2014/06/1406081923342436.jpg" />
 <h6>12年前的2002年6月14日，在贵州平塘掌布乡发现了刻于2.7亿年前的“中国共产党亡”“藏字石”。贵州“藏字石”昭告中国共产党即将覆灭不可逆转的天意，并警示世人认清中共的邪恶本质，顺天意退出中共组织保平安。（网络图片）
 </h6>
 <hr>
-<p>【大纪元2014年06月09日讯】（大纪元记者杨一帆报导）中华五千年传统文化博大精深，“天人合一”、“天人感应”是其重要特征之一。纵观中国历史，每有天象来临，必有石情发生，上天以此警示世人。12年前的2002年6月14日，在贵州平塘掌布乡发现了刻于2.7亿年前的“中国共产党亡”“<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E8%97%8F%E5%AD%97%E7%9F%B3.md">藏字石</a>”。贵州“藏字石”昭告中国共产党即将覆灭不可逆转的天意，并警示世人认清中共的邪恶本质，顺天意退出中共组织保平安。而中外历史上所有的预言也都指向了历史的这一刻——中国巨变在即。巨变来临前，愿生命体悟上天的慈悲，了解真相，作出良知和理智的选择，切莫错过万古难逢的机缘。</p>
-<p><B>贵州惊现2.7亿年前“<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E8%97%8F%E5%AD%97%E7%9F%B3.md">藏字石</a>”昭示中共解体</B></p>
+<p>【大纪元2014年06月09日讯】（大纪元记者杨一帆报导）中华五千年传统文化博大精深，“天人合一”、“天人感应”是其重要特征之一。纵观中国历史，每有天象来临，必有石情发生，上天以此警示世人。12年前的2002年6月14日，在贵州平塘掌布乡发现了刻于2.7亿年前的“中国共产党亡”“<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E8%97%8F%E5%AD%97%E7%9F%B3.md">藏字石</a>”。贵州“藏字石”昭告中国共产党即将覆灭不可逆转的天意，并警示世人认清中共的邪恶本质，顺天意退出中共组织保平安。而中外历史上所有的预言也都指向了历史的这一刻——中国巨变在即。巨变来临前，愿生命体悟上天的慈悲，了解真相，作出良知和理智的选择，切莫错过万古难逢的机缘。</p>
+<p><B>贵州惊现2.7亿年前“<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E8%97%8F%E5%AD%97%E7%9F%B3.md">藏字石</a>”昭示中共解体</B></p>
 <p>历史上凡要出大事之前，上天必以瑞兆示吉或以凶相警世。2002年6月14日，贵州省平塘县掌布乡桃坡村惊现距今约2.7亿年的巨石，上面浮现六个大字：中国共产党亡。</p>
 <p>平塘县掌布乡桃坡村掌布河谷风景区有奇山、奇水、奇石、奇洞、奇竹、奇树、奇鱼等景观。因为交通闭塞，长久不为人所知。2002年6月，都匀国际摄影博览会推荐该景区为摄影采风点，当时村里的布依族村支书王国富在清扫景区时，无意中发现了“藏字石”。</p>
 <p>藏字石上的字出现在巨石的断裂面上。据当地人介绍，大约500年前，一块巨石从拦马河谷的崖壁上坠落，断裂为左右两块，静卧于贵州省黔南州平塘县掌布乡桃坡村境内。</p>
@@ -56,17 +56,17 @@
 <p>中共1949年窃政后，一直处在执政合法性的危机中，依靠暴力、欺骗和谎言，维持着其血腥的统治。中共通过思想改造、三反、五反、镇反、土地改革、肃反、反右、大跃进、文革、“六四”、镇压法轮功等政治运动，造成了8,000万同胞非正常死亡，超过两次世界大战死亡人数的总和。</p>
 <p>如今中共统治下的中国大陆，几乎无官不贪，社会道德沦丧，色情泛滥，政治动荡不安，经济危机频现，天灾人祸不断，民怨冲天。</p>
 <p><B>中共迫害法轮功让民众仇视佛法救度无望</B></p>
-<p><a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md">法轮大法</a>是上乘佛家修炼大法，以 “真、善、忍”为修炼原则，1992年5月13日由李洪志先生在中国长春传出，现已洪传世界一百多个国家和地区。</p>
-<p>根据佛经记载，优昙<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%A9%86%E7%BD%97%E8%8A%B1.md">婆罗花</a>是佛界仙花，三千年一开。自1997年婆罗花在韩国清溪寺佛像上首次被发现后，十几年来，婆罗花在世界各地悄然盛开，祥瑞之气降临人间。释迦牟尼佛当初预言，优昙婆罗花在人间开放之日，就是法轮圣王下世传法度人之时。</p>
+<p><a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md">法轮大法</a>是上乘佛家修炼大法，以 “真、善、忍”为修炼原则，1992年5月13日由李洪志先生在中国长春传出，现已洪传世界一百多个国家和地区。</p>
+<p>根据佛经记载，优昙<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E5%A9%86%E7%BD%97%E8%8A%B1.md">婆罗花</a>是佛界仙花，三千年一开。自1997年婆罗花在韩国清溪寺佛像上首次被发现后，十几年来，婆罗花在世界各地悄然盛开，祥瑞之气降临人间。释迦牟尼佛当初预言，优昙婆罗花在人间开放之日，就是法轮圣王下世传法度人之时。</p>
 <figure id="attachment_5742105" style="width: 479px" class="wp-caption aligncenter"><img src="http://i.epochtimes.com/assets/uploads/2014/06/1406081926022436.jpg" alt="图为2014年5月14日，来自世界50多个国家的近4,000名法轮功学员，在纽约曼哈顿中城举行庆祝“世界法轮大法日”的大型游行庆典活动，纪念法轮大法传世22周年。（爱德华/大纪元）" title="图为2014年5月14日，来自世界50多个国家的近4,000名法轮功学员，在纽约曼哈顿中城举行庆祝“世界法轮大法日”的大型游行庆典活动，纪念法轮大法传世22周年。（爱德华/大纪元）" width="479" b="319"
-	class="size-large wp-image-5742105" /></a><figcaption class="wp-caption-text">图为2014年5月14日，来自世界50多个国家的近4,000名法轮功学员，在纽约曼哈顿中城举行庆祝“世界<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md">法轮大法</a>日”的大型游行庆典活动，纪念法轮大法传世22周年。（爱德华/大纪元）</figcaption></figure>
+	class="size-large wp-image-5742105" /></a><figcaption class="wp-caption-text">图为2014年5月14日，来自世界50多个国家的近4,000名法轮功学员，在纽约曼哈顿中城举行庆祝“世界<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md">法轮大法</a>日”的大型游行庆典活动，纪念法轮大法传世22周年。（爱德华/大纪元）</figcaption></figure>
 <p>唐朝的《推背图》，诸葛亮的《马前课》，北宋的《梅花诗》，刘伯温的《烧饼歌》，法国的《诸世纪》，韩国的《格庵遗录》和《圣经启示录》，古今中外所有的预言也都指向了历史的今天——法轮大法洪传于世。</p>
 <p>救人的法轮大法已在人间洪传22年，“转轮圣王”在人间正法、传法度人已22周年。大法“福音”传遍全球，神迹和辉煌正在人间不断再现。</p>
 <p>1999年7月20日至今，中共残酷镇压法轮功，对佛法犯下了滔天大罪。很多民众在中共对法轮功的诽谤和谎言欺骗下对大法犯罪，而一个生命一旦仇视佛法就会救度无望。十几年来，法轮大法修炼者在中共残酷的迫害中，依然慈悲世人，持续向世人讲真相。</p>
 <p>越来越多的世人从中共的谎言中觉醒，相信大法的世人得福报，诚念法轮大法好、真善忍好的人得福报，善待大法和大法弟子的人得福报，无数觉醒的世人把大法的真相广泛传播。了解真相法轮功是众生得救的唯一希望。</p>
 <p><B>《九评共产党》引发汹涌退党大潮</B></p>
 <p>2004年底，《大纪元》系列社论《九评共产党》横空出世，深刻揭示了中共的邪恶本质和历史罪恶。正如《九评共产党》所说：“中国共产党的统治是中国历史上最黑暗，也最荒谬的一页，又以江泽民发动的对‘真善忍’的镇压最为邪恶。这场运动给中共的棺材钉上了最后一颗钉子，”“现今苟延残喘的共产政权已经日暮途穷，它们的崩溃指日可待。” </p>
-<p>《九评》引发了中国民众汹涌的“<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md">三退</a>”大潮，截止目前，已经有超过167,768,999人退出了中国共产党、共青团、少先队。他们在佛法真理和中共邪党之间、善与恶之间做出了良知的选择，也选择了美好的未来。</p>
+<p>《九评》引发了中国民众汹涌的“<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md">三退</a>”大潮，截止目前，已经有超过167,768,999人退出了中国共产党、共青团、少先队。他们在佛法真理和中共邪党之间、善与恶之间做出了良知的选择，也选择了美好的未来。</p>
 <p>中国社会爆发的退党潮是中国民众伟大的精神觉醒运动，《九评》 正在改变中共这个历史上最残暴的政权强加给中国社会的毁灭命运，引领时代的巨变。中共正处于彻底崩溃的前夜。 </p>
 <p>历史必将证明，没有了中国共产党，才有新中国，中国才会有希望，正义善良的中国人民一定会重塑历史的辉煌。愿所有善良的中国人认清中共的邪恶本质，选择正义和良知，勇敢地退出中共的党、团、队，拥有一个美好的未来，共同迎接一个没有共产党的新中国的到来。善良的人们将有缘亲眼见证佛法真理在人间的辉煌再现！</p>
 <p>（责任编辑：高静）</p>
@@ -75,7 +75,7 @@
 <hr>
 
 #### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/14/6/9/n4173977.htm">历史今日：2.7亿年“藏字石”蕴藏巨大天机</a>
+> 原文：<a href="http://www.epochtimes.com/gb\14\6\9\n4173977.htm">历史今日：2.7亿年“藏字石”蕴藏巨大天机</a>
 
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
@@ -91,25 +91,25 @@
 > <li><a href="http://www.epochtimes.com/gb/13/3/12/n3820204.htm">与你的生命有关 三千年一开的佛国圣花婆罗花竞相开放(36p)</a></li>
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636278.htm">【翻墙必看】分析：四中全会公报或泄大秘密</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638219.htm">林郑被习韩摆上台 香港步入黑暗时期</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11637891.htm">加前大使：中共猪肉战储已耗尽 疫情超严重</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638276.htm">河南一婚宴 猪肘子刚上桌就被“秒杀”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">唐代使者漂流到巨人国</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">【才子佳人】梁祝的故事 我们读懂了吗？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/28/n11617434.htm">【历史回眸】远离中共 在港建中文大学的钱穆</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">【才子佳人】借汉人身份嫁乾隆曾孙的满清才女</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635571.htm">北京花巨资换马克龙参加进博会 却遭当面批评</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11633778.htm">传任学锋京西宾馆跳楼 四中全会罕见换地点</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635931.htm">王小洪任中共新设机构特勤局局长 引猜测</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635378.htm">【新闻看点】习近平进博会大讲开放 引质疑</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11638539.htm">【拍案惊奇】何君尧遇袭疑点 香港未来局势</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636316.htm">【拍案惊奇】港艺人激辩反送中 科大生坠楼分析</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11631219.htm">遗传李靓蕾天赋 王力宏3岁女儿展画功</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11632910.htm">叶蕴仪在乌克兰独立广场发声：心与香港相联</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635562.htm">晒头发遮眼加口罩生活照 容祖儿疑遭大陆封杀</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11631669.htm">柾国驾车疏失导致事故 Big Hit娱乐发声明致歉</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635746.htm">仰望45度唱姿缘何练成 费玉清揭歌手生涯秘辛</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744649.htm">英预言家：2020年中国发生革命 川普连任</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11743919.htm">【翻墙必看】盘点2019中共搞砸的大事件</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743757.htm">大陆大中院校禁过圣诞节 民众如是说</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744554.htm">袜子里藏生物样本回国 中国男美国机场被捕</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733028.htm">以世运占星学解析中共政权的出生盘</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743273.htm">中国多地禁过圣诞 藉历史宣传“仇恨”</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741030.htm">大陆课外培训机构倒闭潮 今年1.2万家关停</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11743804.htm">【拍案惊奇】不平夜全港乱战 传2人坠楼警在场</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743683.htm">【热点互动】美国防法案 暗制中共 明挺台湾</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743455.htm">【新闻看点】蔡英文一年大翻盘 北京功劳不小</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739135.htm">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744287.htm">侯佩岑婚后8年首晒全家福 温馨庆圣诞</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743740.htm">高圆圆女儿受宠爱 赵又廷父母为孙女制圣诞礼</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mprjd2205/djy/blob/master/gb/14/6/9/n4173977.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/14/6/9/n4173977.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
