--- a/gb/18/12/9/n10900044.md
+++ b/gb/18/12/9/n10900044.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5773.md#1">贪腐淫乱 | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/mprjd2205/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mprjd2205/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/osnkrv285/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/osnkrv285/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>人权日 全球逾303万举报江泽民反人类罪</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2018/12/be3a5f34f73010b0c97e0f1d372afa75-600x400.jpg" />
+<img width="600" src="http://i.epochtimes.com/assets/uploads/2018/12/be3a5f34f73010b0c97e0f1d372afa75-600x400.jpg" />
 <h6>全球已有34个国家、逾303万人向中共最高检、最高法院举报江泽民迫害法轮功的反人类罪行，要求法办元凶江泽民。图为示意图。（陈柏州／大纪元）
 </h6>
 <hr>
-<p>【大纪元2018年12月09日讯】（大纪元记者吴旻洲台湾台北报导）今年是《世界人权宣言》70周年。<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E4%BA%BA%E6%9D%83%E6%97%A5.md">国际人权日</a>12月10日前夕，“全球声援中国民众控告江泽民迫害<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md">法轮功</a>的刑事举报联署活动”总协调<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E6%9C%B1%E5%A9%89%E7%90%AA.md">朱婉琪</a>律师公布最新全球举报统计。</p>
-<p>截至12月7日为止，全球已有34个国家、逾303万人向中共最高检、最高法院<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E4%B8%BE%E6%8A%A5%E6%B1%9F%E6%B3%BD%E6%B0%91.md">举报江泽民</a>迫害<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md">法轮功</a>的反人类罪行，要求法办元凶江泽民。</p>
+<p>【大纪元2018年12月09日讯】（大纪元记者吴旻洲台湾台北报导）今年是《世界人权宣言》70周年。<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E4%BA%BA%E6%9D%83%E6%97%A5.md">国际人权日</a>12月10日前夕，“全球声援中国民众控告江泽民迫害<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md">法轮功</a>的刑事举报联署活动”总协调<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E6%9C%B1%E5%A9%89%E7%90%AA.md">朱婉琪</a>律师公布最新全球举报统计。</p>
+<p>截至12月7日为止，全球已有34个国家、逾303万人向中共最高检、最高法院<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E4%B8%BE%E6%8A%A5%E6%B1%9F%E6%B3%BD%E6%B0%91.md">举报江泽民</a>迫害<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md">法轮功</a>的反人类罪行，要求法办元凶江泽民。</p>
 <p>由中国法轮功学员于2015年发起的“诉江大潮”，时至今日3年多来，已有超过20万中国法轮功学员及其家属以具名方式，控告中共前党魁江泽民违法迫害法轮功，这项义举也引发世界各国民众的响应及关注。</p>
-<p><a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E6%9C%B1%E5%A9%89%E7%90%AA.md">朱婉琪</a>表示，目前已有34国、超过303万人（3,031,871）要求法办江泽民。</p>
-<p>其中以台湾、日本及韩国民众参与<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E4%B8%BE%E6%8A%A5%E6%B1%9F%E6%B3%BD%E6%B0%91.md">举报江泽民</a>的人数为最多，台湾有106万702人、日本有70万6,702人、韩国有67万1,422人。欧洲方面，共有27国参与，以乌克兰、以色列、西班牙、俄国及罗马尼亚连署举报的人数为最多。</p>
+<p><a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E6%9C%B1%E5%A9%89%E7%90%AA.md">朱婉琪</a>表示，目前已有34国、超过303万人（3,031,871）要求法办江泽民。</p>
+<p>其中以台湾、日本及韩国民众参与<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E4%B8%BE%E6%8A%A5%E6%B1%9F%E6%B3%BD%E6%B0%91.md">举报江泽民</a>的人数为最多，台湾有106万702人、日本有70万6,702人、韩国有67万1,422人。欧洲方面，共有27国参与，以乌克兰、以色列、西班牙、俄国及罗马尼亚连署举报的人数为最多。</p>
 <figure id="attachment_5891533" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2015/07/1507170943582330.jpg"><img class="size-large wp-image-5891533" src="http://i.epochtimes.com/assets/uploads/2015/07/1507170943582330-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">“全球声援中国民众告江的刑事举报联署”行动中，亚洲地区以台湾、日本、韩国参与人数最多。图为香港七一游行，民阵持控告江泽民的大旗上街。（宋祥龙／大纪元）</figcaption></figure>
 <h2>全球力推信仰自由?中共却加大镇压</h2>
 <p>今年7月美国国务院在华府召开“促进宗教自由部长级大会”，会中美国副总统彭斯提到，“这种宝贵的自由不是由政府赋予的，而是创世主赋予的。我们相信它不仅属于美国人民，它属于所有人。”</p>
@@ -73,7 +73,7 @@
 <hr>
 
 #### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/18/12/9/n10900044.htm">人权日 全球逾303万举报江泽民反人类罪</a>
+> 原文：<a href="http://www.epochtimes.com/gb\18\12\9\n10900044.htm">人权日 全球逾303万举报江泽民反人类罪</a>
 
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
@@ -82,25 +82,25 @@
 > <li><a href="http://www.epochtimes.com/gb/18/11/12/n10846688.htm">国际人权论坛“奥斯陆”亚洲据点落脚台湾</a></li>
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636278.htm">【翻墙必看】分析：四中全会公报或泄大秘密</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638219.htm">林郑被习韩摆上台 香港步入黑暗时期</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11637891.htm">加前大使：中共猪肉战储已耗尽 疫情超严重</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638276.htm">河南一婚宴 猪肘子刚上桌就被“秒杀”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">唐代使者漂流到巨人国</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">【才子佳人】梁祝的故事 我们读懂了吗？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">【才子佳人】借汉人身份嫁乾隆曾孙的满清才女</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/28/n11617434.htm">【历史回眸】远离中共 在港建中文大学的钱穆</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635571.htm">北京花巨资换马克龙参加进博会 却遭当面批评</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11633778.htm">传任学锋京西宾馆跳楼 四中全会罕见换地点</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635931.htm">王小洪任中共新设机构特勤局局长 引猜测</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635378.htm">【新闻看点】习近平进博会大讲开放 引质疑</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11637799.htm">【新闻看点】林郑见习韩 中联办港澳办被冷落</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11637817.htm">【十字路口】中共超限战袭香港 26条统战侵台</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11631219.htm">遗传李靓蕾天赋 王力宏3岁女儿展画功</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11632910.htm">叶蕴仪在乌克兰独立广场发声：心与香港相联</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638183.htm">杜汶泽舌战陈百祥后呼吁：集中精神做对的事</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635562.htm">晒头发遮眼加口罩生活照 容祖儿疑遭大陆封杀</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635898.htm">章子怡试镜日本艺伎 曾因仅说四个字惨遭淘汰</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744649.htm">英预言家：2020年中国发生革命 川普连任</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11743919.htm">【翻墙必看】盘点2019中共搞砸的大事件</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743757.htm">大陆大中院校禁过圣诞节 民众如是说</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744554.htm">袜子里藏生物样本回国 中国男美国机场被捕</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733028.htm">以世运占星学解析中共政权的出生盘</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743273.htm">中国多地禁过圣诞 藉历史宣传“仇恨”</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741030.htm">大陆课外培训机构倒闭潮 今年1.2万家关停</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11743804.htm">【拍案惊奇】不平夜全港乱战 传2人坠楼警在场</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743683.htm">【热点互动】美国防法案 暗制中共 明挺台湾</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743455.htm">【新闻看点】蔡英文一年大翻盘 北京功劳不小</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739135.htm">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744287.htm">侯佩岑婚后8年首晒全家福 温馨庆圣诞</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743740.htm">高圆圆女儿受宠爱 赵又廷父母为孙女制圣诞礼</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mprjd2205/djy/blob/master/gb/18/12/9/n10900044.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/18/12/9/n10900044.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
