--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -22,6 +22,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/18/n11664341.md#1" target="_blank">【新闻看点】鼠疫涉陆三省？最可怕不是疫情</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/18/n11664341.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/plague4-1112-600x400-1-150x120.jpg" align ="left"></a>网络传出，北京多家医院都收治了疑似鼠疫患者。医院要求病人报告最近是否去过青海、甘肃和内蒙古地区。据此外界推测，这三个省区可能都已经发生了鼠疫。但是中共一直语焉不详，有专家推测，大陆的鼠疫可能比想像中还要严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 7:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/17/n11661503.md#1" target="_blank">内蒙新增鼠疫病例 疫情全貌遭严密封锁</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/17/n11661503.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/image-5-150x120.jpg" align ="left"></a>蒙古卫健委周日（17日）凌晨发布消息称，当地卫生部门在一天前确诊一位在乌兰察布市化德县医院就诊的55岁患者，受到腺鼠疫情感染。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 1:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/17/n11661086.md#1" target="_blank">内蒙又1人被确诊鼠疫 28人曾与之密切接触</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/17/n11661086.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/08/908051910581497-150x120.jpg" align ="left"></a>11月17日，中共官方披露，16日，内蒙古自治区锡林郭勒盟镶黄旗巴音塔拉苏木采石场一男子，在乌兰察布市化德县医院就诊期间，被确诊为患上腺鼠疫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 8:31 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/4/n11699616.md#1" target="_blank">湖南浏阳一家烟花厂爆炸 已致7死多伤</a><br></h3>湖南长沙浏阳市澄潭江镇碧溪烟花制造有限公司石下工区今天（4日）上午发生爆炸，目前已造成7人死亡多人受伤，周边部分村民房屋窗户受损。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/4/n11699970.md#1" target="_blank">乌鲁木齐机场因天气影响 4000余人滞留</a><br></h3>12月4日，乌鲁木齐机场因受天气影响，截止下午1时，已有4000人滞留。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:22 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/3/n11697025.md#1" target="_blank">北京顺义一豆馅厂房爆炸 4死10伤</a><br></h3>12月3日另成3时7分左右，北京顺义区牛栏山镇京日东大食品有限公司一加工豆馅厂房发生爆炸。截止目前，4人死亡10人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 3:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/3/n11696856.md#1" target="_blank">张家口4分钟内两次地震 北京居民有震感</a><br></h3>12月3日，河北张家口市怀安县连续发生两次地震，一次2.9级，一次3.4级。不少北京网民表示有震感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:44 PM							</td></tr>
@@ -36,6 +37,5 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/21/n11671034.md#1" target="_blank">传北京东城区广渠门中学一学生被刺身亡</a><br></h3>11月21日上午，北京东城区天坛东路上原人才市场附近，广渠门中学一名学生被刺身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 5:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/20/n11667599.md#1" target="_blank">山东煤矿发生安全事故 11人被困</a><br></h3>11月20日5时50分，山东能源肥城矿业集团位于嘉祥县境内的梁宝寺煤矿发生安全事故，造成11人被困，目前救援工作正在进行中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 10:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/19/n11665020.md#1" target="_blank">中国山西煤矿瓦斯爆炸 造成15死9伤</a><br></h3>中国山西省平遥县昨日（18日）下午发生一起煤矿瓦斯爆炸事故，造成15人遇难，9人受伤，搜救已在今日凌晨2时结束，事故原因正在调查中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 10:07 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/16/n11659848.md#1" target="_blank">浙大学生与男友吵架后遗体在河道内被发现</a><br></h3>11月11日，大陆新浪微博上传出浙江平湖市的“一个单身妈妈的血泪控诉”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 4:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/osnkrv285/djy/blob/master/gb/ncid280_3.md#1<br><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/ncid280_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_3.htm">http://www.epochtimes.com/gb/ncid280_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
