--- a/gb/ncid280_4.md
+++ b/gb/ncid280_4.md
@@ -22,7 +22,6 @@
 .........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 12:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/10/25/n11611452.md#1" target="_blank">连续干旱3个月 江西省至少440万人受灾</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/10/25/n11611452.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1t-g-150x120.jpg" align ="left"></a>自7月以来，江西省多地出现干旱，部分地区旱情严重。据官方统计，至今旱情已导致至少440万人受灾，逾42.4万公顷农作物受灾，全省农业损失占比95%以上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月25日 6:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/10/19/n11598877.md#1" target="_blank">北京多区现阴霾天气 局地五级重度污染</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/10/19/n11598877.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1172684508-150x120.jpg" align ="left"></a>10月19日，北京多地出现阴霾天气，其中，通州、顺义达重度阴霾水平。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月19日 5:24 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/16/n11659848.md#1" target="_blank">浙大学生与男友吵架后遗体在河道内被发现</a><br></h3>11月11日，大陆新浪微博上传出浙江平湖市的“一个单身妈妈的血泪控诉”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 4:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/15/n11657369.md#1" target="_blank">安徽蚌埠5间门面房着火 致5死3伤</a><br></h3>11月15日，中共安徽省应急管理厅网站消息，今天（15日）6时57分许，安徽蚌埠市龙子湖区淮河路车站新村853栋门面房发生火灾，导致5死，1重伤，2人轻伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 1:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/14/n11654973.md#1" target="_blank">在北京确诊两名鼠疫患者 一人病情危重</a><br></h3>近日，两名内蒙古患者在北京被确诊为鼠疫的消息引发广泛关注。《新京报》14日最新报导称，目前一名患者病情危重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 5:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/12/n11651047.md#1" target="_blank">北京确认内蒙古2人染鼠疫</a><br></h3>北京市朝阳区政府12日晚通报，内蒙古锡林郭勒盟苏尼特左旗有2人经诊断为“肺鼠疫”确诊病例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 2:54 AM							</td></tr>
@@ -33,5 +32,6 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/10/25/n11611902.md#1" target="_blank">河南化工厂爆炸致1人死 珠海商铺突发大火</a><br></h3>10月25日上午，河南一家化工厂发生爆炸，目前已知事故造成1人死亡。现场画面显示，火势凶猛，现场掀起“蘑菇云”。附近居民表示，爆炸发生时自家房子颤抖，家中有玻璃被震碎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月25日 7:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/10/24/n11609061.md#1" target="_blank">河北兴华钢铁厂发生火灾 导致7人死亡</a><br></h3>10月24日，中共河北应急管理厅网站消息，今天（24日）凌晨日3时30分，邯郸武安河北兴华钢铁有限公司烧结车间皮带通廊着火，导致7人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 5:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/10/24/n11609128.md#1" target="_blank">上海普陀发生严重交通事故 已致5死9伤</a><br></h3>10月24日上午9时25分许，上海金沙江路发生严重交通事故，目前已致5死9伤。有现场目击者回忆事发瞬间时说，一辆小车在行驶时忽然加速冲向人群，一辆白色轿车和几辆电动车避让不及被撞飞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 5:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/10/15/n11589376.md#1" target="_blank">“像在炸山一样”广西化工厂爆炸4死6伤</a><br></h3>10月15日上午，广西玉林一家化工厂发生爆炸，官方消息称，事故已造成4死6伤，其中2人重伤。涉事的工厂附近的一家企业负责人形容爆炸的巨响和震感“就像在炸山一样”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月15日 6:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/osnkrv285/djy/blob/master/gb/ncid280_4.md#1<br><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid280_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/ncid280_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_4.htm">http://www.epochtimes.com/gb/ncid280_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
