--- a/gb/ncid277_5.md
+++ b/gb/ncid277_5.md
@@ -38,7 +38,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/23/n11675424.md#1" target="_blank">中共控制留学生 破坏美国大学学术自由</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/23/n11675424.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/classroom-381900_1280-150x120.jpg" align ="left"></a>中共通过驻外使馆对海外留学生进行控制，有西方学者已认识到中共正在系统地破坏西方学术自由，动摇西方价值体系根基，并出台了准则，共同抵制对学术自由的威胁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725028.md#1" target="_blank">林郑月娥赴京述职地点突改变 引揣测</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725028.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/36-1-150x120.jpg" align ="left"></a>香港特首林郑月娥日前进京述职。今天（12月16日），林郑分别与李克强、习近平见面，汇报香港的最新情况。有报导说，林郑今天的述职地点，由此前的中南海紫光阁改为人民大会堂，引外界揣测。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11724857.md#1" target="_blank">“辱母杀人案”苏银霞出狱 49岁头发全白</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11724857.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/6a03dc1766fd694f949bbd8833d26a2c-150x120.jpg" align ="left"></a>山东“辱母杀人案”的母亲苏银霞，坐牢3年后，于12月14日刑满释放。现年49岁的苏银霞头发全白了。她说，在监狱特别愁，心理压力特别大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:04 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11724977.md#1" target="_blank">遭中共疯狂仿制武器 俄因未申请专利而无奈</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11724977.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/03/1203071717381119-150x120.jpg" align ="left"></a>中共不断仿制武器让俄罗斯伤透脑筋。近日，有俄罗斯军工领域负责人表示，从航空发动机到战斗机，再到防空导弹，中共无所不仿，但由于没有申请国际专利，俄罗斯对此几乎束手无策。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:27 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11727611.md#1" target="_blank">河南许昌公安局副局长彭杰投案被调查</a><br></h3>12月17日，官方通报，许昌市公安局党委委员、副局长、正县级侦查员彭杰涉嫌严重违纪违法，已主动投案，目前正接受调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11727200.md#1" target="_blank">广西禁毒大队前大队长养两情妇及私生子</a><br></h3>广西靖西市公安局禁毒大队原大队长黄毅有两名情妇且婚外生子；并每月向吸毒人员收取“保护费”，充当贩毒人员“保护伞”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725738.md#1" target="_blank">中共军工专家李守泽突然去世 引关注</a><br></h3>日前，现年58岁的中共军工企业、中航飞机股份有限公司（下称中航飞机）副总经理李守泽去世，引外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_6.md#1">下一页</a></h3></td></tr>
