--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -44,7 +44,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716248.md#1" target="_blank">孙运璿的未竟之路</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716248.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/SUN2-150x120.jpg" align ="left"></a>孙运璿先生在台湾经济发展的关键时期担任了近二十年的部长与行政首长，普遍被认为是台湾经济与科技发展的主要推手，他带领着一群杰出的政经团队让台湾安然渡过石油危机、中美断交等事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 8:37 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/9/n11710394.md#1" target="_blank">天地清明引(140) 东流水－浩然正气5</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/9/n11710394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/4325af0fb8983b64fd5334fb52749c7c-150x120.jpg" align ="left"></a>莅日，三部会审。禁曲主审武平王纳兰庭芳、刑部尚书铎克齐、大理寺卿郑恕杰，于刑部升堂，审理京城东市私弹禁曲一案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/30/n11691752.md#1" target="_blank">【馨香雅句】“不鸣则已，一鸣惊人”背后的故事</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/30/n11691752.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/be39713a3f9512907ae3f44e080e92e7-150x120.jpg" align ="left"></a>生活中有很多人平时没没无闻，但是却突然一鸣惊人，做出很大的成就，这背后是有如神助还是另有其因呢？今天和大家分享一个楚庄王的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:12 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/25/n11679909.md#1" target="_blank">麦立：防</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/25/n11679909.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/mily-1218-150x120.jpg" align ="left"></a>有人时时在 防 防坏人 防小偷  防自己心爱的 流失 防自己心爱的 减损 防这         防那......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:05 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/20/n11735539.md#1" target="_blank">五律：诗（二）</a><br></h3> 抖擞重霄下，落尘天上尊。 大音发星斗，高响动乾坤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/20/n11734081.md#1" target="_blank">诗歌：深冬</a><br></h3>  大雪漫漫入深冬 松柏青青笑寒风......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:23 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11733039.md#1" target="_blank">五律：思念</a><br></h3> 何事长萦梦，任情千里飞。 天荒犹客老，物换岂人非。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11730570.md#1" target="_blank">歌词：这里，那里（二）</a><br></h3> 春在玛瑙里， 夏在翡翠里， 秋在金籽里， 冬在璧玉里。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:19 PM			</td></tr>
